fullSandbox11072023/force-app/main/default/objects/CS_Education_Record__c/CS_Education_Record__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Education Records</label>
</CustomObject>