fullSandbox11072023/force-app/main/default/objects/CS_Education_Record__c/fields/Administrative_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Assistant__c</fullName>
    <label>Administrative Assistant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>