fullSandbox11072023/force-app/main/default/objects/CS_Education_Record__c/fields/Administrative_Assistant_Email__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Assistant_Email__c</fullName>
    <label>Administrative Assistant Email</label>
    <type>Email</type>
</CustomField>