fullSandbox11072023/force-app/main/default/objects/CS_Education_Record__c/fields/Business_Unit_Abbr__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Abbr__c</fullName>
    <label>Business Unit Abbreviation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>