fullSandbox11072023/force-app/main/default/objects/CS_Education_Record__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>