fullSandbox11072023/force-app/main/default/objects/CS_Education_Record__c/fields/SFDC_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Admin_Email__c</fullName>
    <label>SFDC Admin Email</label>
    <type>Email</type>
</CustomField>