fullSandbox11072023/force-app/main/default/objects/CS_Education_Record__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>SFDC_Admin_Email__c</columns>
    <columns>Administrative_Assistant__c</columns>
    <columns>Administrative_Assistant_Email__c</columns>
    <columns>Business_Unit_Abbr__c</columns>
    <columns>RecordType__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>en_US</language>
</ListView>